force-app/main/default/objects/leaseworks__Py_Line_Item__c/leaseworks__Py_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Line items for Payable</description>
    <label>Payable Line Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payable Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>