force-app/main/default/objects/leaseworks__Py_Line_Item__c/fields/leaseworks__Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Approval_Status__c</fullName>
    <description>Approval Status of the Payable</description>
    <formula>TEXT( leaseworks__Payables__r.leaseworks__Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Approval Status of the Payable</inlineHelpText>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>