force-app/main/default/objects/leaseworks__Py_Line_Item__c/fields/leaseworks__Company__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lessor Information from the associated lease</description>
    <inlineHelpText>Lessor Information from the associated lease</inlineHelpText>
    <label>Z_Unused_2206 Company</label>
    <referenceTo>leaseworks__Counterparty__c</referenceTo>
    <relationshipLabel>Payable Line Item</relationshipLabel>
    <relationshipName>Payable_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>