force-app/main/default/objects/leaseworks__Py_Line_Item__c/fields/leaseworks__Company_Lookup__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Company_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lessor Information from the associated lease</description>
    <inlineHelpText>Lessor Information from the associated lease</inlineHelpText>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payable Line Items</relationshipLabel>
    <relationshipName>Payable_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>