force-app/main/default/objects/leaseworks__Py_Line_Item__c/fields/leaseworks__Line_Amount_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Line_Amount_Balance_Due__c</fullName>
    <description>Payable Line Amount - Line Payout Amount</description>
    <formula>IF(
   OR(
       leaseworks__Approval_Status__c = &quot;Declined&quot;,
       leaseworks__Approval_Status__c = &quot;Cancelled&quot;
   ),
   0,
   leaseworks__Payable_Line_Amount__c -  leaseworks__Line_Payout_Amount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payable Line Amount - Line Payout Amount</inlineHelpText>
    <label>Line Amount Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>