force-app/main/default/objects/leaseworks__Py_Line_Item__c/fields/leaseworks__Payable_Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payable_Line_Amount__c</fullName>
    <label>Payable Line Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>