force-app/main/default/objects/leaseworks__Py_Line_Item__c/fields/leaseworks__Payable_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payable_Line_Type__c</fullName>
    <label>Payable Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Other Fee</fullName>
            </value>
            <value>
                <fullName>Security Deposit Refund</fullName>
            </value>
            <value>
                <fullName>MR Claim Event</fullName>
                <label>MR Claim</label>
            </value>
            <value>
                <fullName>Rebate</fullName>
            </value>
            <value>
                <fullName>MR Reconciliation Refund</fullName>
            </value>
            <value>
                <fullName>Manual MR Payable</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>MR TrueUp</fullName>
            </value>
            <value>
                <fullName>Rent Reduction</fullName>
            </value>
            <value>
                <fullName>HL/SL Rent Payable</fullName>
            </value>
            <value>
                <fullName>HL/SL MR Payable</fullName>
            </value>
            <value>
                <fullName>HL/SL SD Payable</fullName>
            </value>
            <value>
                <fullName>Other Charges</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>HL/SL Interest Payable</fullName>
            </value>
            <value>
                <fullName>Loan Principle</fullName>
            </value>
            <value>
                <fullName>Loan Interest</fullName>
            </value>
            <value>
                <fullName>Loan Other Costs</fullName>
            </value>
            <value>
                <fullName>Loan Agent Fee</fullName>
            </value>
            <value>
                <fullName>Loan Bank Charges</fullName>
            </value>
            <value>
                <fullName>Loan Tax</fullName>
            </value>
            <value>
                <fullName>Security Deposit - MR Refund</fullName>
            </value>
            <value>
                <fullName>Lessor Commitment</fullName>
            </value>
            <value>
                <fullName>Lessor Contribution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>