force-app/main/default/objects/leaseworks__Py_Line_Item__c/fields/leaseworks__Payable_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payable_Type__c</fullName>
    <description>Payable Type from Payable</description>
    <formula>TEXT(leaseworks__Payables__r.leaseworks__Payable_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payable Type</label>
    <type>Text</type>
</CustomField>