force-app/main/default/objects/leaseworks__Py_Line_Item__c/fields/leaseworks__Payables__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payables__c</fullName>
    <description>Link to Parent Payable record</description>
    <label>Payables</label>
    <referenceTo>leaseworks__Payable__c</referenceTo>
    <relationshipLabel>Payable Line Item</relationshipLabel>
    <relationshipName>Payable_Line_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>