force-app/main/default/objects/leaseworks__Py_Line_Item__c/fields/leaseworks__Reconciliation_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reconciliation_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reconciliation Line Item</label>
    <referenceTo>leaseworks__Reconciliation_Line_Item__c</referenceTo>
    <relationshipLabel>Payable Line Items</relationshipLabel>
    <relationshipName>Payable_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>