force-app/main/default/objects/leaseworks__Py_Line_Item__c/fields/leaseworks__Supplemental_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Supplemental_Rent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplemental Rent</label>
    <referenceTo>leaseworks__Assembly_MR_Rate__c</referenceTo>
    <relationshipLabel>Payable Line Items</relationshipLabel>
    <relationshipName>Payable_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>