force-app/main/default/objects/leaseworks__Py_Line_Item__c/validationRules/leaseworks__No_Update_on_PayableLineItem.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__No_Update_on_PayableLineItem</fullName>
    <active>false</active>
    <description>No field except comments should be editable on the payable line item.</description>
    <errorConditionFormula>/*AND(!$Setup.LeaseWorksSettings__c.Disable_All_Triggers__c,
  				OR( ISCHANGED(Payable_Line_Amount__c),ISCHANGED(Line_Payout_Amount__c),ISCHANGED(Company__c),ISCHANGED( Payable_Line_Type__c )))*/false</errorConditionFormula>
    <errorMessage>&apos;Payable Line Item&apos; record cannot be manually modified</errorMessage>
</ValidationRule>